<resources>
    <string name="app_name">BrookeSellerInventoryApp</string>

    <!-- Logo -->
    <string name="logo_content_desc">App logo</string>

    <!-- Login -->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="create_login">Create Login</string>
    <string name="login">Login</string>
    <string name="error_password_length">Password must be at least 8 characters</string>

    <!-- Inventory Database Page -->
    <string name="inventory_title">Inventory</string>
    <string name="search_hint">Search items…</string>
    <string name="filter_all">All</string>
    <string name="filter_in_stock">In Stock</string>
    <string name="filter_out_of_stock">Out of Stock</string>
    <string name="warning_zero_qty">Out of stock</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_more">More</string>
    <string name="search_name">Search name</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">search_title</string>
    <string name="inventory">Inventory</string>
    <string name="action_search">search\n</string>
    <string name="product_image">product_image</string>
    <string name="sku">SKU:</string>
    <string name="upc">UPC:</string>
    <string name="pref_feedback_title">feedback_title</string>
    <string name="pref_change_password_title">change_password\n</string>
    <string name="pref_notifications_manage_title">manage_notifications</string>
    <string name="pref_notifications_title">notification_title</string>
    <string name="notifications_title">Notifications</string>
    <string name="filter_low_stock">Low Stock</string>
    <string name="low_stock_alert">Low Stock</string>
    <string name="field_role">Role</string>
    <string name="btn_clear">Delete</string>
    <string name="col_password">Password</string>
    <string name="col_username">Username\n</string>
    <string name="col_employee">Employee Name</string>
    <string name="label_employee">Employee Name</string>
    <string name="btn_delete">Delete</string>
    <string name="hint_current_password">Current password</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_confirm_password">Confirm new password</string>
    <string name="btn_save">Save</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="change_password">Change Password</string>
    <string name="manage_notification_settings">Manage Notification Settings</string>
    <string name="notifications">Notifications</string>
    <string name="add">Add Product</string>
    <string name="remove_item">Delete Item</string>
    <string name="action_notifications">Notifications</string>
</resources>